// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ThreadCard Component > should match snapshot when comments are expanded 1`] = `
<DocumentFragment>
  <div
    class="w-full min-w-[350px] font-primary border-[0.5px] rounded-lg px-4 py-2 flex flex-col gap-2"
  >
    <div
      class="text-[14px] font-primary min-h-9 flex items-center font-medium border-b-[0.5px] pb-2"
    >
      Selected text: "selected text here"
    </div>
    <div
      data-testid="comment-card-1"
    >
      <span
        data-testid="comment-content"
      >
        First comment
      </span>
      <span
        data-testid="comment-author"
      >
        John Doe
      </span>
    </div>
    <div
      class="grid transition-[grid-template-rows] duration-500 ease-out grid-rows-[1fr]"
    >
      <div
        class="overflow-hidden flex flex-col gap-2"
      >
        <div
          class="transition-all duration-500 ease-out"
          style="transform: translateY(0); opacity: 1; transition-delay: 0ms;"
        >
          <div
            data-testid="comment-card-2"
          >
            <span
              data-testid="comment-content"
            >
              Second comment
            </span>
            <span
              data-testid="comment-author"
            >
              John Doe
            </span>
          </div>
        </div>
        <div
          class="transition-all duration-500 ease-out"
          style="transform: translateY(0); opacity: 1; transition-delay: 50ms;"
        >
          <div
            data-testid="comment-card-3"
          >
            <span
              data-testid="comment-content"
            >
              Third comment
            </span>
            <span
              data-testid="comment-author"
            >
              John Doe
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t-[0.5px] transition-all duration-300 cursor-pointer py-2 text-typography-800 text-[14px] flex items-center justify-center gap-2"
    >
      Collapse 
      <div
        class="w-3 h-3 transition-transform duration-300 rotate-180"
        data-testid="arrow-icon"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ThreadCard Component > should match snapshot when rendered with multiple comments 1`] = `
<DocumentFragment>
  <div
    class="w-full min-w-[350px] font-primary border-[0.5px] rounded-lg px-4 py-2 flex flex-col gap-2"
  >
    <div
      class="text-[14px] font-primary min-h-9 flex items-center font-medium border-b-[0.5px] pb-2"
    >
      Selected text: "selected text here"
    </div>
    <div
      data-testid="comment-card-1"
    >
      <span
        data-testid="comment-content"
      >
        First comment
      </span>
      <span
        data-testid="comment-author"
      >
        John Doe
      </span>
    </div>
    <div
      class="grid transition-[grid-template-rows] duration-500 ease-out grid-rows-[0fr]"
    >
      <div
        class="overflow-hidden flex flex-col gap-2"
      >
        <div
          class="transition-all duration-500 ease-out"
          style="transform: translateY(-20px); opacity: 0; transition-delay: 60ms;"
        >
          <div
            data-testid="comment-card-2"
          >
            <span
              data-testid="comment-content"
            >
              Second comment
            </span>
            <span
              data-testid="comment-author"
            >
              John Doe
            </span>
          </div>
        </div>
        <div
          class="transition-all duration-500 ease-out"
          style="transform: translateY(-20px); opacity: 0; transition-delay: 30ms;"
        >
          <div
            data-testid="comment-card-3"
          >
            <span
              data-testid="comment-content"
            >
              Third comment
            </span>
            <span
              data-testid="comment-author"
            >
              John Doe
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-t-[0.5px] transition-all duration-300 cursor-pointer py-2 text-typography-800 text-[14px] flex items-center justify-center gap-2"
    >
      2 more comments 
      <div
        class="w-3 h-3 transition-transform duration-300 "
        data-testid="arrow-icon"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ThreadCard Component > should match snapshot when rendered with single comment 1`] = `
<DocumentFragment>
  <div
    class="w-full min-w-[350px] font-primary border-[0.5px] rounded-lg px-4 py-2 flex flex-col gap-2"
  >
    <div
      class="text-[14px] font-primary min-h-9 flex items-center font-medium border-b-[0.5px] pb-2"
    >
      Selected text: "selected text here"
    </div>
    <div
      data-testid="comment-card-1"
    >
      <span
        data-testid="comment-content"
      >
        Only comment
      </span>
      <span
        data-testid="comment-author"
      >
        John Doe
      </span>
    </div>
    <div
      class="grid transition-[grid-template-rows] duration-500 ease-out grid-rows-[0fr]"
    >
      <div
        class="overflow-hidden flex flex-col gap-2"
      />
    </div>
  </div>
</DocumentFragment>
`;
